testing colors to link css w/ html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     
 </body>
 <footer> 
-    <div class="footer" ></div>
+    <div class="footer" > Copyright @ The Odin Project 2021</div>
 </footer>
 </html>
