Adding some images

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 <body>
     <div class="one"> This is my landing page
         <p> words,  smaller subtext. picture to the right of the words & sign up button at the bottom of the words </p>
+        <img src="alien-1295498_1280.png" alt="alien with 5 eyes" class="alien1">
     </div>
     <div class="two">
-        <p> small header with 4 boxes with rounded corners add pics and words under the boxes</p>
+        <p> small header with 4 boxes with rounded corners add pics and words under the boxes
+            <div class="flex-container">
+                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+            </div>
+        </p>
     </div>
     <div class="three">
         <p> big quote on grey background with em font</p>
@@ -23,6 +31,6 @@
     
 </body>
 <footer> 
-    <div class="footer" > Copyright @ The Odin Project 2021</div>
+    <div class="footer" > Copyright @ Dessy 2024</div>
 </footer>
 </html>
