Finish HTML.. Now for CSS

--- a/index.html
+++ b/index.html
@@ -8,25 +8,32 @@
 </head>
 <header> pls work </header>
 <body>
-    <div class="one"> This is my landing page
-        <p> words,  smaller subtext. picture to the right of the words & sign up button at the bottom of the words </p>
+    <div class="one"> <h1>This is my Landing Page</h1>
+        <p> I am creating this page for "TOP Project: Landing Page". I put some aliens on here. :)  </p>
         <img src="alien-1295498_1280.png" alt="alien with 5 eyes" class="alien1">
     </div>
     <div class="two">
-        <p> small header with 4 boxes with rounded corners add pics and words under the boxes
-            <div class="flex-container">
-                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
-                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
-                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
-                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+        <h1>These are my Aliens</h1>
+            <div class="row">
+                 <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                    <span> Dave </span>
+                 <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                    <span> Bob </span>
+                 <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                 <span> Kevin </span>
+                 <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                 <span> Tim </span>
             </div>
-        </p>
     </div>
     <div class="three">
-        <p> big quote on grey background with em font</p>
+        <p>
+            <h2>"Mentally ill, Please.. Someone call a doctor!"</h2> 
+            <h3>- Waka Flocka</h3>
+        </p>
     </div>
     <div class="four"> 
-        <p> big blue box with button & some words</p>
+        <p> The button does nothing.. but it looks cool. </p>
+        <button>Pointless</button>
     </div>
     
 </body>
