one more commit..

--- a/index.html
+++ b/index.html
@@ -6,42 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Des's Landing Page</title>
 </head>
-<header> pls work 
-    <link class="head-link">
-    <link class="head-link">
-    <link class="head-link">
+<header> Header Logo 
+    <div class="links">
+        <a href="link">Link One</a>
+        <a href="link">Link Two</a>
+        <a href="link">Link Three</a>
+    </div>
 </header>
 <body>
-    <div class="one"> <h1>This is my Landing Page</h1>
-        <p> I am creating this page for "TOP Project: Landing Page". I put some aliens on here. :)  </p>
-        <button class="button">Pointless</button>
-        <img src="alien-1295498_1280.png" alt="alien with 5 eyes" class="alien1">
+    <div class="one"> <h1 class="one-text">This is my Landing Page</h1>
+        <p class="one-text"> This is my "TOP Project: Landing Page". I put some aliens on here. :)  </p>
+        <button class="button1">Pointless</button>
+        <img src="alien-1295828_1280.png" alt="red alien" class="alien1">
     </div>
     <div class="two">
-        <h1>These are my Aliens</h1>
-            <div class="row">
-                 <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
-                    <span class="names"> Dave </span>
-                 <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
-                    <span class="names"> Bob </span>
-                 <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
-                    <span class="names"> Kevin </span>
-                 <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
-                    <span class="names"> Tim </span>
+        <h1 class="two-text">These are my Aliens</h1>
+        <div class="row">
+            <div class="image-container">
+                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                <span class="names">Dave</span>
             </div>
+            <div class="image-container">
+                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                <span class="names">Bob</span>
+            </div>
+            <div class="image-container">
+                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                <span class="names">Kevin</span>
+            </div>
+            <div class="image-container">
+                <img src="monster-148797_1280.png" alt="orange alien" class="alien2">
+                <span class="names">Tim</span>
+            </div>
+        </div>
+    </div>
     </div>
     <div class="three">
-        <p>
-            <h2>"Mentally ill, Please.. Someone call a doctor!"</h2> 
-            <h3>- Waka Flocka</h3>
-        </p>
+        <p class="quote">"Mentally ill, Please.. Someone call a doctor!"</p>
+            <h3 class="author">- Waka Flocka</h3>
     </div>
     <div class="four"> 
-        <div class="box">The button does nothing.. but it looks cool. <button class="button">Pointless</button></div>
+        <div class="box">The button does nothing.. but it looks cool. <button class="button2">Pointless</button></div>
     </div>
     
 </body>
 <footer> 
-    <div class="footer" > Copyright @ Dessy 2024</div>
+    <div class="footer">Dessy 2024</div>
 </footer>
 </html>
