--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Des's Landing Page</title>
 </head>
-<header> Header Logo 
-    <div class="links">
-        <a href="link">Link One</a>
-        <a href="link">Link Two</a>
-        <a href="link">Link Three</a>
+<header>
+   <div>
+     <h1 class="header-logo">Header Logo</h1> <div class="links">
+            <a href="link">Link One</a>
+            <a href="link">Link Two</a>
+            <a href="link">Link Three</a>
+        </div>
     </div>
 </header>
 <body>
-    <div class="one"> <h1 class="one-text">This is my Landing Page</h1>
-        <p class="one-text"> This is my "TOP Project: Landing Page". I put some aliens on here. :)  </p>
+    <div class="one">
+        <h1 class="one-text">This is my "TOP Project: Landing Page".</h1>
+        <p class="one-subtext">I put some aliens on here. :)</p>
         <button class="button1">Pointless</button>
         <img src="alien-1295828_1280.png" alt="red alien" class="alien1">
-    </div>
+    </div>  
     <div class="two">
         <h1 class="two-text">These are my Aliens</h1>
         <div class="row">
@@ -46,11 +49,17 @@
             <h3 class="author">- Waka Flocka</h3>
     </div>
     <div class="four"> 
-        <div class="box">The button does nothing.. but it looks cool. <button class="button2">Pointless</button></div>
+        <div class="box">
+            <h1 class="box-text">The button does nothing..</h1>
+            <h5 class="box-text">but it looks cool.</h5> 
+            <button class="button2">Pointless</button>
+        </div>
     </div>
     
 </body>
 <footer> 
-    <div class="footer">Dessy 2024</div>
+    <div class="footer">
+        <p class="footer-text">Dessy 2024</p>
+    </div>
 </footer>
 </html>
